KubernetesTraining/module_04_02/odoo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo
  namespace: odoo
spec:
  selector:
    app: odoo
  ports:
  - protocol: TCP
    port: 8069
    targetPort: 8069
  type: ClusterIP
